test/fail_compilation/fail264.d
void main() {
    foreach (element; undef) {
        fn(element);
    }
}

void fn(int i) {}

